Refact: Liga Rangliste auf Java-Berechnung + SheetSyncListener umgestellt
Entfernt die per-Spieltag-Formel-Spalten (IFNA/INDEX/MATCH) aus der Liga-Rangliste.
Daten werden jetzt direkt aus dem Spielplan in Java aggregiert und als Werte
geschrieben (wie JGJ). Neue Spaltenstruktur: Nr | Name | Rang | Punkte+/- |
Spiele+/-/Δ | SpPunkte+/-/Δ | Begegnungen (keine hidden Spieltag-Spalten mehr).

LigaRanglisteSheetUpdate + SheetSyncListener registriert, sodass die Rangliste
bei Tab-Wechsel automatisch aktualisiert wird (analog Schweizer, JGJ etc.).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>